<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:layout_gravity="center_vertical"
    android:gravity="center"
    android:background="@color/colorBG"
tools:context=".LoginActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginBottom="40dp"
    android:text="@string/txt_login"
    android:textSize="30sp"
    android:textStyle="bold"
    android:textColor="@color/colorTitle"
    app:fontFamily="sans-serif-black" />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_weight="4"

        android:drawableLeft="@drawable/person"
        android:gravity="center_vertical"
        android:textColor="@color/colorTxt" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="45dp"
        android:layout_weight="1"
        android:hint="@string/txt_usernameHint"
        android:inputType="text"
        android:textColor="@color/colorTxt"
        android:textColorHint="@color/colorHint"
        android:textSize="16sp" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_weight="4"
        android:drawableLeft="@drawable/lock"
        android:gravity="center_vertical"
        android:textColor="@color/colorTxt" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="50dp"
        android:layout_weight="1"
        android:hint="@string/txt_passwordHint"
        android:inputType="textPassword"
        android:textColor="@color/colorTxt"
        android:textColorHint="@color/colorHint"
        android:textSize="16sp" />

</LinearLayout>

<TextView
    android:onClick="goToWeb"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp"
    android:textSize="16sp"
    android:textStyle="bold"
    android:textColor="@color/colorSubtitle"
    android:text="@string/url">
</TextView>


<Button
    android:onClick="login"
    android:text="@string/btn_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="40dp"
    android:background="@color/colorPrimaryDark"
    android:textColor="@color/colorWhite"
    android:textSize="18sp" />

</LinearLayout>